<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:id="@+id/datos_incorrectos"
    android:layout_height="wrap_content"
    >


    <androidx.appcompat.widget.AppCompatTextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"

        android:gravity="center_horizontal"
        android:scaleType="center"
        android:textColor="#054141"
        android:text="Datos ingresados son incorrectos"
        android:textAlignment="center"
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"

        android:textColor="#036262"
        android:gravity="center_horizontal"
        android:scaleType="center"
        android:text="El número de cédula o código de cita ingresados no están asociados a una cita, por favor compruebe los datos e inténtelo nuevamente"
        android:textAlignment="center"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/entendido"
        android:layout_width="121dp"
        android:backgroundTint="#036262"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Entendido"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textSize="15sp"

        app:cornerRadius="20dp" />

</LinearLayout>